Switch from ssl to tls library.
This aligns with the current hannesm/xmpp#master branch.

--- a/batyr-test.conf
+++ b/batyr-test.conf
@@ -9,6 +9,7 @@
     <extension findlib-package="ocsigenserver.ext.ocsipersist-sqlite"/>
     <extension findlib-package="eliom.server"/>
     <extension findlib-package="config-file"/>
+    <extension findlib-package="tls.lwt"/>
     <extension findlib-package="erm_xmpp"/>
     <extension findlib-package="postgresql"/>
     <extension findlib-package="prime"/>
