Use replace custom DB interface with Caqti.

--- a/batyr-test.conf
+++ b/batyr-test.conf
@@ -14,6 +14,7 @@
     <extension findlib-package="postgresql"/>
     <extension findlib-package="prime"/>
     <extension findlib-package="prime.testing"/>
+    <extension findlib-package="caqti.lwt"/>
     <library module="_build/lib/batyr.cma"/>
     <host hostfilter="*">
       <static dir="web/static"/>
