--- a/batyr-test.conf
+++ b/batyr-test.conf
@@ -8,6 +8,7 @@
     <extension findlib-package="ocsigenserver.ext.staticmod"/>
     <extension findlib-package="ocsigenserver.ext.ocsipersist-sqlite"/>
     <extension findlib-package="eliom.server"/>
+    <extension findlib-package="extunix"/>
     <extension findlib-package="config-file"/>
     <extension findlib-package="tls.lwt"/>
     <extension findlib-package="erm_xmpp"/>
