Update library name.

--- a/ocsigen-dev.conf
+++ b/ocsigen-dev.conf
@@ -14,7 +14,7 @@
     <extension findlib-package="erm_xmpp"/>
     <extension findlib-package="postgresql"/>
     <extension findlib-package="prime"/>
-    <extension findlib-package="prime.testing"/>
+    <extension findlib-package="prime.unstable"/>
     <extension findlib-package="caqti.lwt"/>
     <library module="_build/lib/batyr.cma"/>
     <host hostfilter="*">
