Add /status page, useful for monitoring.

--- a/ocsigen-dev.conf
+++ b/ocsigen-dev.conf
@@ -16,6 +16,7 @@
     <extension findlib-package="prime"/>
     <extension findlib-package="prime.unstable"/>
     <extension findlib-package="caqti.lwt"/>
+    <extension findlib-package="yojson"/>
     <library module="_build/lib/batyr.cma"/>
     <host hostfilter="*">
       <static dir="web/static"/>
