--- a/ocsigen-dev.conf
+++ b/ocsigen-dev.conf
@@ -13,6 +13,7 @@
     <extension findlib-package="tls.lwt"/>
     <extension findlib-package="erm_xmpp"/>
     <extension findlib-package="postgresql"/>
+    <extension findlib-package="ppx_deriving.runtime"/>
     <extension findlib-package="prime"/>
     <extension findlib-package="prime.unstable"/>
     <extension findlib-package="caqti.lwt"/>
