Switch packager to topkg.

--- a/ocsigen-dev.conf
+++ b/ocsigen-dev.conf
@@ -22,7 +22,7 @@
     <host hostfilter="*">
       <static dir="web/static"/>
       <static dir="_build/web/client"/>
-      <eliommodule module="_build/web/batyrweb.cma"/>
+      <eliommodule module="_build/web/server/batyrweb.cma"/>
       <eliom/>
     </host>
   </server>
