--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,3 @@
-/META
-/Makefile
 /_build
 /_var
-/configure
-/lib/batyr_version.ml
-/setup.data
-/setup.exe
-/setup.log
-/setup.ml
+/batyr.install
