--- a/ocsigen-dev.conf
+++ b/ocsigen-dev.conf
@@ -12,11 +12,12 @@
     <extension findlib-package="config-file"/>
     <extension findlib-package="tls.lwt"/>
     <extension findlib-package="erm_xmpp"/>
-    <extension findlib-package="postgresql"/>
     <extension findlib-package="ppx_deriving.runtime"/>
     <extension findlib-package="prime"/>
     <extension findlib-package="prime.unstable"/>
-    <extension findlib-package="caqti.lwt"/>
+    <extension findlib-package="caqti-dynload"/>
+    <extension findlib-package="caqti-lwt"/>
+    <extension findlib-package="caqti-type-calendar"/>
     <extension findlib-package="yojson"/>
     <library module="_build/lib/batyr.cma"/>
     <host hostfilter="*">
