--- a/ocsigen-dev.conf
+++ b/ocsigen-dev.conf
@@ -19,7 +19,8 @@
     <extension findlib-package="caqti-lwt"/>
     <extension findlib-package="caqti-type-calendar"/>
     <extension findlib-package="yojson"/>
-    <library module="_build/lib/batyr.cma"/>
+    <library module="_build/lib/batyr-lib.cma"/>
+    <library module="_build/on-xmpp/batyr-on-xmpp.cma"/>
     <host hostfilter="*">
       <static dir="web/static"/>
       <static dir="_build/web/client"/>
