--- a/web/ocsigen-dev.conf
+++ b/web/ocsigen-dev.conf
@@ -19,8 +19,8 @@
     <extension findlib-package="caqti-lwt"/>
     <extension findlib-package="caqti-type-calendar"/>
     <extension findlib-package="yojson"/>
-    <library module="_build/lib/batyr-lib.cma"/>
-    <library module="_build/on-xmpp/batyr-on-xmpp.cma"/>
+    <extension findlib-package="batyr-lib"/>
+    <extension findlib-package="batyr-on-xmpp"/>
     <host hostfilter="*">
       <static dir="web/static"/>
       <static dir="_build/web/client"/>
