--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
 *.mllib
 *.odocl
+.merlin
 /_build
 /_var
 /batyr.install
 /batyr-lib.install
 /batyr-on-slack.install
 /batyr-on-xmpp.install
-/batyr-web.install
+/web/batyr-web.install
