--- a/batyr-lib.opam
+++ b/batyr-lib.opam
@@ -6,11 +6,7 @@ homepage: "https://github.com/paurkedal/batyr/"
 bug-reports: "https://github.com/paurkedal/batyr/issues"
 dev-repo: "https://github.com/paurkedal/batyr.git"
 license: "GPL-3"
-build: [
-  "ocaml" "pkg/pkg.ml" "build"
-          "--pkg-name" name
-          "--dev-pkg" "%{pinned}%"
-]
+build: ["jbuilder" "build" "-p" name "-j" jobs]
 depends: [
   "adpkg" {build}
   "calendar"
