Move down build file for web.
Moved batyr-web.opam moved to the root for opam pinning to work.  For
topkg lint to see it, topkg now needs to be run from the root (".." is
not allowed in the path).  Then _tags needs to be moved to the root,
since topkg expects it there, which means ocamlbuild needs to be run
from the root, which means myocamlbuild.ml needs to be moved to the
root.

--- a/batyr-web.opam
+++ b/batyr-web.opam
@@ -7,10 +7,9 @@ bug-reports: "https://github.com/paurkedal/batyr/issues"
 dev-repo: "https://github.com/paurkedal/batyr.git"
 license: "GPL-3"
 build: [
-  ["cd" "web"]
-  ["ocaml" "pkg/pkg.ml" "build"
-           "--pkg-name" name
-           "--dev-pkg" "%{pinned}%"]
+  "ocaml" "pkg/pkg_web.ml" "build"
+          "--pkg-name" name
+          "--dev-pkg" "%{pinned}%"
 ]
 depends: [
   "batyr-lib"
