Adjust ocamlbuild build dir and fix ref in ocsigen-dev.conf.

--- a/web/ocsigen-dev.conf
+++ b/web/ocsigen-dev.conf
@@ -23,8 +23,8 @@
     <extension findlib-package="batyr-on-xmpp"/>
     <host hostfilter="*">
       <static dir="web/static"/>
-      <static dir="_build/web/client"/>
-      <eliommodule module="_build/web/server/batyrweb.cma"/>
+      <static dir="_build/ocamlbuild/web/client"/>
+      <eliommodule module="_build/ocamlbuild/web/server/batyrweb.cma"/>
       <eliom/>
     </host>
   </server>
