--- a/batyr-lib.opam
+++ b/batyr-lib.opam
@@ -1,13 +1,12 @@
-opam-version: "1.2"
+opam-version: "2.0"
 name: "batyr-lib"
-author: "Petter A. Urkedal <paurkedal@gmail.com>"
 maintainer: "Petter A. Urkedal <paurkedal@gmail.com>"
+authors: "Petter A. Urkedal <paurkedal@gmail.com>"
+license: "GPL-3"
 homepage: "https://github.com/paurkedal/batyr/"
 bug-reports: "https://github.com/paurkedal/batyr/issues"
-dev-repo: "https://github.com/paurkedal/batyr.git"
-license: "GPL-3"
-build: ["jbuilder" "build" "-p" name "-j" jobs]
 depends: [
+  "ocaml"
   "adpkg" {build}
   "calendar"
   "caqti" {>= "0.8"}
@@ -26,3 +25,5 @@ depends: [
   "tls"
   "topkg" {build}
 ]
+build: ["jbuilder" "build" "-p" name "-j" jobs]
+dev-repo: "git+https://github.com/paurkedal/batyr.git"
