Update to lwt 4, js_of_ocaml 3.3 and eliom 6.6.

--- a/batyr-on-xmpp.opam
+++ b/batyr-on-xmpp.opam
@@ -17,6 +17,8 @@ depends: [
   "config-file"
   "erm_xmpp"
   "lwt"
+  "lwt_log"
+  "lwt_ppx"
   "lwt_react"
   "ocamlfind" {build}
   "ppx_compose"
