Replace jbuilder invocation with dune.

--- a/batyr-lib.opam
+++ b/batyr-lib.opam
@@ -27,5 +27,5 @@ depends: [
   "tls"
   "topkg" {build}
 ]
-build: ["jbuilder" "build" "-p" name "-j" jobs]
+build: ["dune" "build" "-p" name "-j" jobs]
 dev-repo: "git+https://github.com/paurkedal/batyr.git"
