--- a/batyr-on-xmpp.opam
+++ b/batyr-on-xmpp.opam
@@ -29,5 +29,5 @@ depends: [
   "topkg" {build}
   "x509"
 ]
-build: ["jbuilder" "build" "-p" name "-j" jobs]
+build: ["dune" "build" "-p" name "-j" jobs]
 dev-repo: "git+https://github.com/paurkedal/batyr.git"
