--- a/batyr-lib.opam
+++ b/batyr-lib.opam
@@ -29,3 +29,4 @@ depends: [
 ]
 build: ["dune" "build" "-p" name "-j" jobs]
 dev-repo: "git+https://github.com/paurkedal/batyr.git"
+synopsis: "Base library for the Batyr chat logger"
