--- a/batyr-on-slack.opam
+++ b/batyr-on-slack.opam
@@ -43,3 +43,4 @@ depends: [
 ]
 build: ["dune" "build" "-p" name "-j" jobs]
 dev-repo: "git+https://github.com/paurkedal/batyr.git"
+synopsis: "Slack support for Batyr based on the realtime API"
