--- a/batyr-on-xmpp.opam
+++ b/batyr-on-xmpp.opam
@@ -31,3 +31,4 @@ depends: [
 ]
 build: ["dune" "build" "-p" name "-j" jobs]
 dev-repo: "git+https://github.com/paurkedal/batyr.git"
+synopsis: "XMPP logger for Batyr"
