Load caqti-driver-postgresql directly in ocsigen-dev.conf.

--- a/web/ocsigen-dev.conf
+++ b/web/ocsigen-dev.conf
@@ -15,7 +15,7 @@
     <extension findlib-package="ppx_deriving.runtime"/>
     <extension findlib-package="prime"/>
     <extension findlib-package="prime.unstable"/>
-    <extension findlib-package="caqti-dynload"/>
+    <extension findlib-package="caqti-driver-postgresql"/>
     <extension findlib-package="caqti-lwt"/>
     <extension findlib-package="caqti-type-calendar"/>
     <extension findlib-package="yojson"/>
