Update to ppx_protocol_conv >= 5.0.0.

--- a/batyr-on-slack.opam
+++ b/batyr-on-slack.opam
@@ -27,6 +27,7 @@ depends: [
   "ocamlfind" {build}
   "ppx_compose"
   "ppx_deriving"
+  "ppx_protocol_conv_jsonm" {>= "5.0.0"}
   "ppx_regexp"
   "prime"
   "ptime"
