--- a/lib/dune
+++ b/lib/dune
@@ -31,7 +31,7 @@
     ptime
     ptime.clock.os
     react)
-  (preprocess (pps js_of_ocaml-ppx.deriving lwt_ppx ppx_compose ppx_deriving)))
+  (preprocess (pps lwt_ppx ppx_compose)))
 
 (ocamllex batyr_search_lexer)
 (ocamlyacc batyr_search_parser)
