--- a/web/ocsigen-dev.conf
+++ b/web/ocsigen-dev.conf
@@ -19,7 +19,7 @@
     <extension findlib-package="caqti-lwt"/>
     <extension findlib-package="caqti-type-calendar"/>
     <extension findlib-package="yojson"/>
-    <extension findlib-package="batyr-lib"/>
+    <extension findlib-package="batyr-core"/>
     <extension findlib-package="batyr-on-xmpp"/>
     <host hostfilter="*">
       <static dir="web/static"/>
