--- a/batyr-core.opam
+++ b/batyr-core.opam
@@ -1,5 +1,5 @@
 opam-version: "2.0"
-name: "batyr-lib"
+name: "batyr-core"
 maintainer: "Petter A. Urkedal <paurkedal@gmail.com>"
 authors: "Petter A. Urkedal <paurkedal@gmail.com>"
 license: "GPL-3"
