Preprocess batyr-on-slack per_module to avoid parse tree issue.

--- a/batyr-on-slack/lib/dune
+++ b/batyr-on-slack/lib/dune
@@ -14,4 +14,8 @@
     slacko
     websocket
     websocket-lwt-unix)
-  (preprocess (pps lwt_ppx ppx_compose ppx_protocol_conv ppx_regexp)))
+  (preprocess
+    (per_module
+      ((pps lwt_ppx) slack_cache slack_rtm)
+      ((pps lwt_ppx ppx_compose ppx_regexp) slack_utils)
+      ((pps lwt_ppx ppx_protocol_conv) listener log))))
