Replace obsolete dns-lwt-unix with dns-client.

--- a/batyr-on-slack.opam
+++ b/batyr-on-slack.opam
@@ -17,7 +17,7 @@ depends: [
   "cmdliner" {>= "1.1.0"}
   "conduit"
   "conduit-lwt"
-  "dns-lwt-unix"
+  "dns-client"
   "kojson"
   "logs"
   "lru"
