--- a/web/ocsigen-dev.conf
+++ b/web/ocsigen-dev.conf
@@ -6,12 +6,13 @@
     <charset>utf-8</charset>
     <commandpipe>_var/run/command.pipe</commandpipe>
     <extension findlib-package="ocsigenserver.ext.staticmod"/>
-    <extension findlib-package="ocsigenserver.ext.ocsipersist-sqlite"/>
+    <extension findlib-package="ocsipersist.sqlite"/>
     <extension findlib-package="eliom.server"/>
     <extension findlib-package="extunix"/>
     <extension findlib-package="config-file"/>
     <extension findlib-package="tls.lwt"/>
     <extension findlib-package="erm_xmpp"/>
+    <extension findlib-package="nocrypto.lwt"/>
     <extension findlib-package="ppx_deriving.runtime"/>
     <extension findlib-package="prime"/>
     <extension findlib-package="prime.unstable"/>
