--- a/batyr-core.opam
+++ b/batyr-core.opam
@@ -6,7 +6,7 @@ license: "GPL-3"
 homepage: "https://github.com/paurkedal/batyr/"
 bug-reports: "https://github.com/paurkedal/batyr/issues"
 depends: [
-  "ocaml"
+  "dune" {>= "2.0"}
   "calendar"
   "caqti" {>= "0.8"}
   "caqti-dynload"
@@ -19,6 +19,7 @@ depends: [
   "lwt_react"
   "ppx_compose"
   "ppx_deriving"
+  "ocaml"
   "prime"
   "react"
   "tls"
