--- a/batyr-on-slack.opam
+++ b/batyr-on-slack.opam
@@ -6,8 +6,8 @@ license: "GPL-3"
 homepage: "https://github.com/paurkedal/batyr/"
 bug-reports: "https://github.com/paurkedal/batyr/issues"
 depends: [
-  "ocaml"
   "batyr-core"
+  "dune" {>= "2.0"}
   "calendar"
   "caqti" {>= "0.8"}
   "caqti-dynload"
@@ -23,6 +23,7 @@ depends: [
   "lwt"
   "lwt_ppx"
   "lwt_react"
+  "ocaml"
   "ppx_compose"
   "ppx_deriving"
   "ppx_protocol_conv_jsonm" {>= "5.0.0"}
