--- a/batyr-on-xmpp/lib/dune
+++ b/batyr-on-xmpp/lib/dune
@@ -1,14 +1,7 @@
 (library
-  (name batyr_xmpp)
+  (name batyr_on_xmpp)
   (public_name batyr-on-xmpp)
-  (modules
-    Data
-    Data_sig
-    Listener
-    Sql ; internal
-    Xmpp_inst)
-  (modules_without_implementation
-    Data_sig)
+  (modules_without_implementation data_sig)
   (libraries
     batyr-core
     caqti
