Add missing js_of_ocaml-tyxml dependency for batyr-web.

--- a/batyr-web.opam
+++ b/batyr-web.opam
@@ -18,6 +18,7 @@ depends: [
   "js_of_ocaml"
   "js_of_ocaml-compiler"
   "js_of_ocaml-ppx"
+  "js_of_ocaml-tyxml"
   "lwt"
   "ocaml"
   "ppx_deriving_yojson"
