--- a/batyr-web.opam
+++ b/batyr-web.opam
@@ -17,7 +17,7 @@ depends: [
   "logs"
   "js_of_ocaml"
   "js_of_ocaml-compiler"
-  "js_of_ocmal-lwt"
+  "js_of_ocaml-lwt"
   "js_of_ocaml-ppx"
   "js_of_ocaml-tyxml"
   "lwt"
