--- a/batyr-web.opam
+++ b/batyr-web.opam
@@ -2,7 +2,7 @@ opam-version: "2.0"
 name: "batyr-web"
 maintainer: "Petter A. Urkedal <paurkedal@gmail.com>"
 authors: "Petter A. Urkedal <paurkedal@gmail.com>"
-license: "GPL-3"
+license: "GPL-3.0-or-later"
 homepage: "https://github.com/paurkedal/batyr/"
 bug-reports: "https://github.com/paurkedal/batyr/issues"
 depends: [
