--- a/batyr-on-slack.opam
+++ b/batyr-on-slack.opam
@@ -17,6 +17,7 @@ depends: [
   "conduit"
   "conduit-lwt"
   "dns-client"
+  "dns-client-lwt"
   "kojson"
   "logs"
   "lru"
@@ -34,6 +35,7 @@ depends: [
   "react"
   "slacko"
   "tls"
+  "tls-lwt"
   "uri"
   "websocket"
   "websocket-lwt-unix"
