Replace remaining lwt_log usage with logs.

--- a/batyr-core.opam
+++ b/batyr-core.opam
@@ -11,8 +11,9 @@ depends: [
   "caqti-dynload"
   "caqti-lwt"
   "extunix"
+  "fmt"
+  "logs"
   "lwt"
-  "lwt_log"
   "lwt_ppx"
   "lwt_react"
   "ppx_compose"
