--- a/batyr-on-xmpp.opam
+++ b/batyr-on-xmpp.opam
@@ -12,8 +12,9 @@ depends: [
   "caqti-dynload"
   "caqti-lwt"
   "erm_xmpp"
+  "fmt"
+  "logs"
   "lwt"
-  "lwt_log"
   "lwt_ppx"
   "lwt_react"
   "mirage-crypto-rng"
